--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Above all else, it is important to keep your credibility.
+            Without credit, it's hard to get things moving quickly.
+            In other words, everything goes smoothly only when we promote mutual benefit.</p>
         </div>
 
         <div class="row">
