--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Yamada Yuka</h1>
+      <h1>Tundu!</h1>
       <p>I'm <span class="typed" data-typed-items="Manager, Developer, Freelancer, Software Engineer"></span></p>
       <div class="social-links">
         <a href="https://join.skype.com/invite/xdgvRTTgWLki" class="google-plus"><i class="bx bxl-skype"></i></a>
