--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>26 October 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>https://game.babylonswap.finance</span>
+                    <a>https://vesq.xyz/</a>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coca, Spain</span></li>
@@ -111,7 +111,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
-                    <span>YamadaYuka1026@gmail.com</span>
+                    <span>sasuke031026@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
