--- a/index.html
+++ b/index.html
@@ -91,24 +91,24 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Blockchain &amp; Full-Stack Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              As a Senior Blockchain developer, I've built several Blockchain projects such as NFT marketplace, DAO,
+              Crypto Exchange
+              and Blockchain casino games.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>26 October 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <a>https://vesq.xyz/</a>
+                    <a href="https://vesq.xyz/">https://vesq.xyz/</a>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coca, Spain</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Abaya, Kazakhstan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
                     <span>sasuke031026@gmail.com</span>
@@ -118,10 +118,9 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              My major strengths are in giving realistic promises, being responsive and responsible,
+              concentrating on business needs and communications. So I am not a pure geek thinking
+              about technology only but, first, a making-things-happen person.
             </p>
           </div>
         </div>
@@ -135,9 +134,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>It takes great effort to make a profit. Strive to be what your customers want.</p>
         </div>
 
         <div class="row">
@@ -145,7 +142,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
                 class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
@@ -154,7 +151,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="56" data-purecounter-duration="1"
                 class="purecounter"></span>
               <p>Projects</p>
             </div>
@@ -174,7 +171,7 @@
               <i class="bi bi-award"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Awards</p>
+              <p>13</p>
             </div>
           </div>
 
@@ -189,9 +186,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>It takes great effort to make a profit. Strive to be what your customers want.</p>
         </div>
 
         <div class="row skills-content">
@@ -215,9 +210,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Web3.js/Express.js/Hardhat/Remix <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -235,7 +238,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">React.js/TypeScript <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -243,9 +246,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Solidity <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Node.js/ Express.js <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -263,23 +274,28 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>I always keep clean, tidy, easily readable, and maintainable code for delivery and this always helped me to
+            succeed in
+            every job.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <h4>Nikita Martilove</h4>
+              <p><em>I'm a smart contract (solidity, solana) and web3 developer (web3js, ethersjs) and i do freelancing
+                  and for people to trust me I take full payment only after the work is done, and I assure 100% quality
+                  smart contracts
+                  due to my past experiences, if not assured with quality of smart contracts I can make changes or take
+                  no payment,
+                  along with developing
+                  I can also make changes to existing smart contracts and test smart contracts, solve a problem, my
+                  speciality is creating
+                  advanced and flexible smart contracts with best security practices</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Kazakhstan Abaya Pr., bld. 117/А, appt. 19</li>
+                <li>sasuke031026@gmail.com</li>
               </ul>
             </div>
 
